# my_cmakefile

./: .gitignore  README.md
helper/: CMakeLists.txt
helper/src/: main.cpp
